--- a/android/app/src/main/res/xml/basic_widget_info.xml
+++ b/android/app/src/main/res/xml/basic_widget_info.xml
@@ -4,6 +4,7 @@
        android:minWidth="110dp"
        android:minHeight="110dp"
        android:updatePeriodMillis="86400000"
+       android:previewImage="@drawable/widget_preview"
        android:resizeMode="none"
        android:widgetCategory="home_screen">
    </appwidget-provider>
